<resources>
    <string name="app_name">TaskModelMVVM</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addName">Name</string>
    <string name="addNaziv">Name</string>
    <string name="addPocetak">Beginning</string>
    <string name="addTag">Tag</string>
    <string name="addElementButton">Add element</string>
    <string name="cancelAddElementButton">Cancel</string>
    <string name="saveEditElementButton">Save</string>
</resources>
